@@ -320,6 +320,7 @@ https://github.com/networkupstools/nut/milestone/11
      and `-l <logfile>`) along with newer tuple(s) for multiple-system logging
      (repeatable `-m <system,logfile>`), previously the single-system options
      were overridden by the tuple(s); now they become part of the list.
+   * A `%t` for a TAB character can now be used in the formatting string.
    * Added systemd and SMF service integration. [#1803]
 
  - More systemd integration:
